--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
 database.php
 config.php
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
